Fix gap

--- a/src/styles/components/_pricing.scss
+++ b/src/styles/components/_pricing.scss
@@ -4,7 +4,7 @@
 .pricing {
   display: grid;
   font-weight: 300;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 
   .package {
     display: grid;
